--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             font-family: Inter, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #c08057;
+            background-color: #007bff;
             color: #556b2f;
         }
         .container {
