--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         /* Login Styles */
         .login-container {
-            background-image: url(../imagens/fundo-site.jpg);
+            background-image: url(/imagens/fundo-site.jpg);
             background-repeat: no-repeat;
             background-size: cover;
             display: flex;
