--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         }
         header h1 {
             font-size: 28px;
-            color: #556b2f;
+            color: #007bff;
             margin: 0;
         }
         .form-header {
@@ -47,11 +47,11 @@
         .form-header-item label {
             font-weight: bold;
             margin-bottom: 5px;
-            color: #556b2f;
+            color: #007bff;
         }
         .form-header-item input, .form-header-item select {
             padding: 8px;
-            border: 2px solid #556b2f;
+            border: 2px solid #007bff;
             border-radius: 4px;
             width: 100%;
         }
@@ -71,7 +71,7 @@
             white-space: nowrap;
         }
         table th {
-            background: #556b2f;
+            background: #007bff;
             color: white;
             text-align: center;
         }
@@ -83,7 +83,7 @@
             margin-top: 20px;
         }
         .actions button {
-            background: #556b2f;
+            background: #007bff;
             color: white;
             border: none;
             padding: 10px 20px;
@@ -92,29 +92,29 @@
             transition: background 0.3s;
         }
         .actions button:hover {
-            background: #6b8e23;
+            background: #007bff;
         }
         button.gerar-nota {
             padding: 5px 10px;
-            background-color: #4CAF50;
+            background-color: #007bff;
             color: #ddd;
             border: none;
             border-radius: 4px;
             cursor: pointer;
         }
         button.gerar-nota:hover {
-            background-color: #45a049;
+            background-color: #007bff;
         }
         button.impressao-nota {
             padding: 5px 10px;
-            background-color: #4CAF50;
+            background-color: #007bff;
             color: white;
             border: none;
             border-radius: 4px;
             cursor: pointer;
         }
         button.impressao-nota:hover {
-            background-color: #45a049;
+            background-color: #007bff;
         }
         img.lupa {
             width: 16px;
@@ -154,7 +154,7 @@
             
         }
         .login-form button {
-            background-color: #c08057;
+            background-color: #007bff;
             color: white;
             padding: 10px;
             border: none;
