--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             font-family: Inter, sans-serif;
             margin: 0;
             padding: 0;
+            background-image: url(/imagens/fundo-site.jpg);
             background-color: #007bff;
             color: #556b2f;
         }
