--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <!-- Main Content -->
     <div id="main-content" class="container" style="display: none;">
         <header>
-            <h1>Monitor de NFE</h1>
+            <h1>Monitor de Documentos Eletrônicos</h1>
         </header>
 
         <!-- Header Form -->
