--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             
         }
         .login-form button {
-            background-color: #007bff;
+            background-image: url(/imagens/fundo-site.jpg);
             color: white;
             padding: 10px;
             border: none;
