--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         }
         .form-header-item input, .form-header-item select {
             padding: 8px;
-            border: 2px solid #007bff;
+            border: 2px solid #556b2f;
             border-radius: 4px;
             width: 100%;
         }
