--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         .form-header-item label {
             font-weight: bold;
             margin-bottom: 5px;
-            color: #007bff;
+            color: black;
         }
         .form-header-item input, .form-header-item select {
             padding: 8px;
-            border: 2px solid #556b2f;
+            border: 2px solid black;
             border-radius: 4px;
             width: 100%;
         }
@@ -126,7 +126,7 @@
 
         /* Login Styles */
         .login-container {
-            background-image: url(/imagens/fundo-site.jpg);
+            background-image: url(../imagens/fundo-site.jpg);
             background-repeat: no-repeat;
             background-size: cover;
             display: flex;
@@ -135,9 +135,10 @@
             flex-direction: column;
             min-height: 100vh;
             gap: 30px;
+            color: #007bff;
         }
         .login-form {
-            background-color: #ddd;
+            background-color: white;
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -150,12 +151,12 @@
             padding: 8px;
             width: 100%;
             border-radius: 4px;
-            border: 2px solid #c08057;
+            border: 2px solid black;
             
         }
         .login-form button {
             background-image: url(/imagens/fundo-site.jpg);
-            color: white;
+            color: #007bff;
             padding: 10px;
             border: none;
             border-radius: 4px;
