--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         /* Login Styles */
         .login-container {
-            background-image: url(../imagens/fundo-site.jpg);
+            background-image: url(/imagens/fundo-site.jpg);
             background-repeat: no-repeat;
             background-size: cover;
             display: flex;
@@ -135,7 +135,7 @@
             flex-direction: column;
             min-height: 100vh;
             gap: 30px;
-            color: #007bff;
+            
         }
         .login-form {
             background-color: white;
