--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             font-family: Inter, sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url(/imagens/fundo-site.jpg);
+            background-image: url(../imagens/fundo-site.jpg);
             color: #556b2f;
         }
         .container {
@@ -126,7 +126,7 @@
 
         /* Login Styles */
         .login-container {
-            background-image: url(/imagens/fundo-site.jpg);
+            background-image: url(../imagens/fundo-site.jpg);
             background-repeat: no-repeat;
             background-size: cover;
             display: flex;
@@ -155,7 +155,7 @@
             
         }
         .login-form button {
-            background-image: url(/imagens/fundo-site.jpg);
+            background-image: url(../imagens/fundo-site.jpg);
             color: #007bff;
             padding: 10px;
             border: none;
